# project_def_dtp

./: .env.serve  AGENTS.md  ASSETS.md  CLAUDE.md  Dockerfile.serve  MODULE_TODO.md  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
configs/: default.toml
docker/: Dockerfile  Dockerfile.cuda  Dockerfile.mlx  docker-compose.yaml  docker-compose.yml
launch/: def_dtp.launch.py
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
scripts/: export_models.py  export_report.py  reproduce_paper.py  run_campaign.py  run_cuda_campaign.py  run_gpu_campaign.py
src/anima_bishamonten/: __init__.py
src/anima_def_dtp/: __init__.py  cli.py  config.py  constants.py  criteria.py  objectives.py  runtime_guards.py  serve.py  types.py  version.py
src/anima_def_dtp/attack/: __init__.py  (+2 more)
tasks/: PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0701.md  PRD-0702.md  PRD-0703.md
tests/: test_api.py  test_boundary.py  test_campaign.py  test_cli.py  test_config.py  test_container_contract.py  test_criteria.py  test_grip_adapter.py  test_metrics.py  test_objectives.py  test_predictor_protocol.py  test_protocol.py  test_release_artifacts.py  test_report.py  test_ros2_contract.py  test_trajectron_adapter.py  test_types.py  test_windows.py
(+24 files in other folders)
